# Initialisation
AC_PREREQ([2.65])

AC_INIT([QMake], [1.5.4], [quickmake-support@lists.sourceforge.net], [QMake], [http://www.ee.surrey.ac.uk/CVSSP/Ravl/RavlDoc/share/doc/RAVL/Auto/Develop/Tree/Ravl.QMake.html])

# This file is part of QMake, Quick Make System
# Copyright (C) 2011-13, University of Surrey
# This code may be redistributed under the terms of the GNU General
# Public License (GPL). See the gpl.licence file for details or
# see http://www.gnu.org/copyleft/gpl.html



AC_CONFIG_SUBDIRS([QMake])
AC_CONFIG_SUBDIRS([src/AutoTools])


AC_OUTPUT

